Fix spacing issue with social icons and RSVP button.

--- a/css/main.less
+++ b/css/main.less
@@ -9,11 +9,13 @@
 
     a {
       color: #fff;
+      margin-left: 6px;
+      margin-right: 6px;
 
       &.social-icon {
-        padding: 6px;
         text-decoration: none;
         position: relative;
+        margin-top: 6px;
 
         i {
           position: relative;
@@ -27,18 +29,18 @@
 
         &.facebook:hover span.icon-background {
           background-color: #3B5998;
-          top: 10px;
-          left: 13px;
+          top: 2px;
+          left: 7px;
           width: 15px;
-          height: 22px;
+          height: 24px;
         }
 
         &.twitter:hover span.icon-background {
           background-color: #00ACED;
-          top: 10px;
-          left: 8px;
-          width: 20px;
-          height: 21px;
+          top: 2px;
+          left: 4px;
+          width: 16px;
+          height: 24px;
         }
       }
     }
